magazine-hero: fix alignment

--- a/blocks/magazine-hero/magazine-hero.css
+++ b/blocks/magazine-hero/magazine-hero.css
@@ -105,6 +105,7 @@
     width: 30%;
     display: flex;
     align-self: start;
+    align-items: flex-start;
   }
 }
 
